[package]
name = "cryptopals"
version = "0.1.0"
authors = ["proby <proby@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21"
aes = "0.8"
regex = "1.10"
lazy_static = "1.4"
rand = "0.8"
